--- a/sections/styles/styles.html
+++ b/sections/styles/styles.html
@@ -241,7 +241,8 @@
     /* 不使用 transform，避免覆盖位置偏移 */
   }
 
-  .styles-card img {
+  .styles-card img,
+  .styles-card video {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -249,9 +250,22 @@
     transition: transform var(--transition);
   }
 
+  /* 视频初始隐藏 */
+  .styles-card video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  /* 悬浮时显示视频，隐藏图片 */
   .styles-card:hover img {
-    transform: scale(1.1);
-    /* 悬浮时图片放大 */
+    opacity: 0;
+  }
+
+  .styles-card:hover video {
+    opacity: 1;
   }
 
   /* ==================== 右侧：内容区域 ==================== */
@@ -647,23 +661,41 @@
 
     <!-- 左侧：风格卡片画廊 -->
     <div class="styles-gallery">
-      <div class="styles-card">
+      <div class="styles-card" data-hover-video>
         <img src="assets/styles/images/styles-image-01.png" alt="Style 1" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-01.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="styles-card">
+      <div class="styles-card" data-hover-video>
         <img src="assets/styles/images/styles-image-02.jpg" alt="Style 2" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-02.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="styles-card">
+      <div class="styles-card" data-hover-video>
         <img src="assets/styles/images/styles-image-03.png" alt="Style 3" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-03.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="styles-card">
+      <div class="styles-card" data-hover-video>
         <img src="assets/styles/images/styles-image-04.png" alt="Style 4" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-04.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="styles-card">
+      <div class="styles-card" data-hover-video>
         <img src="assets/styles/images/styles-image-05.png" alt="Style 5" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-05.mp4" type="video/mp4">
+        </video>
       </div>
-      <div class="styles-card">
+      <div class="styles-card" data-hover-video>
         <img src="assets/styles/images/styles-image-06.png" alt="Style 6" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-06.mp4" type="video/mp4">
+        </video>
       </div>
     </div>
 
@@ -717,7 +749,9 @@
 
     /**
      * 初始化 Styles 模块
-     * 功能：滚动进入视口时触发卡片淡入动画
+     * 功能：
+     * 1. 滚动进入视口时触发卡片淡入动画
+     * 2. 鼠标悬浮时播放视频，离开时暂停并重置
      */
     const initStyles = () => {
       const cards = document.querySelectorAll('.styles-card');
@@ -725,7 +759,7 @@
       // 检查元素是否存在
       if (cards.length === 0) return;
 
-      // 创建 Intersection Observer 实例
+      // 创建 Intersection Observer 实例（用于卡片动画）
       const observerOptions = {
         threshold: 0.2,  // 当 20% 的元素可见时触发
         rootMargin: '0px 0px -50px 0px'  // 提前触发动画
@@ -747,7 +781,29 @@
         observer.observe(card);
       });
 
-      console.log('✅ Styles module initialized with', cards.length, 'cards');
+      // 悬浮视频播放逻辑
+      const videoCards = document.querySelectorAll('[data-hover-video]');
+
+      videoCards.forEach(card => {
+        const video = card.querySelector('video');
+        if (!video) return;
+
+        // 鼠标进入时播放视频
+        card.addEventListener('mouseenter', () => {
+          video.currentTime = 0; // 从头开始播放
+          video.play().catch(err => {
+            console.warn('Video play failed:', err);
+          });
+        });
+
+        // 鼠标离开时暂停并重置视频
+        card.addEventListener('mouseleave', () => {
+          video.pause();
+          video.currentTime = 0; // 重置到开头
+        });
+      });
+
+      console.log('✅ Styles module initialized with', cards.length, 'cards and', videoCards.length, 'hover videos');
     };
 
     // DOM 加载完成后初始化
