--- a/sections/adaptation/adaptation.html
+++ b/sections/adaptation/adaptation.html
@@ -97,6 +97,7 @@
     overflow: hidden;
     border-radius: 16px;
     margin-bottom: 24px;
+    position: relative;
   }
 
   /* 卡片图片 */
@@ -105,11 +106,7 @@
     height: 280px;
     object-fit: cover;
     display: block;
-    transition: transform 0.4s ease;
-  }
-
-  .adaptation-card:hover .adaptation-card-image {
-    transform: scale(1.05);
+    transition: opacity 0.3s ease;
   }
 
   /* 卡片视频 */
@@ -118,60 +115,21 @@
     height: 280px;
     object-fit: cover;
     display: block;
-    transition: transform 0.4s ease;
-    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+  }
+
+  /* 悬浮时显示视频，隐藏图片 */
+  .adaptation-card:hover .adaptation-card-image {
+    opacity: 0;
   }
 
   .adaptation-card:hover .adaptation-card-video {
-    transform: scale(1.05);
-  }
-
-  /* 视频预览模态框 */
-  .video-modal {
-    display: none;
-    position: fixed;
-    z-index: 10000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-    backdrop-filter: blur(10px);
-  }
-
-  .video-modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 90%;
-    max-height: 90%;
-    width: auto;
-    height: auto;
-  }
-
-  .video-modal video {
-    width: 100%;
-    height: 100%;
-    max-width: 80vw;
-    max-height: 80vh;
-    object-fit: contain;
-  }
-
-  .video-modal-close {
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    color: white;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-    z-index: 10001;
-    transition: color 0.3s ease;
-  }
-
-  .video-modal-close:hover {
-    color: #ccc;
+    opacity: 1;
   }
 
   /* 卡片内容区域（图片下方）*/
@@ -305,10 +263,11 @@
         <!-- 三个卡片 -->
         <div class="adaptation-cards">
           <!-- 卡片 1: From A Script -->
-          <div class="adaptation-card" data-video-card>
+          <div class="adaptation-card" data-hover-video>
             <div class="adaptation-card-image-wrapper">
-              <video class="adaptation-card-video" muted loop playsinline data-video-src="assets/adaptation/videos/adaptation-video-01.mp4">
-                <source src="assets/adaptation/videos/adaptation-video-02.mp4" type="video/mp4">
+              <img class="adaptation-card-image" src="assets/adaptation/images/adaptation-image-01.jpg" alt="From A Script" loading="lazy">
+              <video class="adaptation-card-video" muted loop preload="none">
+                <source src="assets/adaptation/videos/adaptation-video-01.mp4" type="video/mp4">
               </video>
             </div>
             <div class="adaptation-card-content">
@@ -320,10 +279,11 @@
           </div>
 
           <!-- 卡片 2: From A Concept -->
-          <div class="adaptation-card" data-video-card>
+          <div class="adaptation-card" data-hover-video>
             <div class="adaptation-card-image-wrapper">
-              <video class="adaptation-card-video" muted loop playsinline data-video-src="assets/adaptation/videos/adaptation-video-03.mp4">
-                <source src="assets/adaptation/videos/adaptation-video-04.mp4" type="video/mp4">
+              <img class="adaptation-card-image" src="assets/adaptation/images/adaptation-image-02.jpg" alt="From A Concept" loading="lazy">
+              <video class="adaptation-card-video" muted loop preload="none">
+                <source src="assets/adaptation/videos/adaptation-video-02.mp4" type="video/mp4">
               </video>
             </div>
             <div class="adaptation-card-content">
@@ -335,10 +295,11 @@
           </div>
 
           <!-- 卡片 3: From An Image -->
-          <div class="adaptation-card" data-video-card>
+          <div class="adaptation-card" data-hover-video>
             <div class="adaptation-card-image-wrapper">
-              <video class="adaptation-card-video" muted loop playsinline data-video-src="assets/adaptation/videos/adaptation-video-05.mp4">
-                <source src="assets/adaptation/videos/adaptation-video-06.mp4" type="video/mp4">
+              <img class="adaptation-card-image" src="assets/adaptation/images/adaptation-image-03.jpg" alt="From An Image" loading="lazy">
+              <video class="adaptation-card-video" muted loop preload="none">
+                <source src="assets/adaptation/videos/adaptation-video-03.mp4" type="video/mp4">
               </video>
             </div>
             <div class="adaptation-card-content">
@@ -354,97 +315,38 @@
   </div>
 </section>
 
-<!-- 视频预览模态框 -->
-<div id="adaptation-video-modal" class="video-modal">
-  <span class="video-modal-close">&times;</span>
-  <div class="video-modal-content">
-    <video id="adaptation-modal-video" controls>
-      <source src="" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-</div>
-
 <script>
   // Adaptation 模块交互逻辑
   (function () {
     'use strict';
 
+    /**
+     * 初始化 Adaptation 模块
+     * 功能：鼠标悬浮时播放视频，离开时暂停并重置
+     */
     const initAdaptation = () => {
-      // 为每个卡片添加交互功能
-      const cards = document.querySelectorAll('.adaptation-card[data-video-card]');
-      cards.forEach(card => {
+      const videoCards = document.querySelectorAll('[data-hover-video]');
+
+      videoCards.forEach(card => {
         const video = card.querySelector('.adaptation-card-video');
         if (!video) return;
 
-        // 视频加载错误处理
-        video.addEventListener('error', function () {
-          console.warn(`Failed to load video: ${this.querySelector('source').src}`);
-          this.style.display = 'none';
-        });
-
-        // 初始状态暂停视频
-        video.pause();
-
-        // 鼠标悬停时播放视频
+        // 鼠标进入时播放视频
         card.addEventListener('mouseenter', () => {
+          video.currentTime = 0; // 从头开始播放
           video.play().catch(err => {
-            console.log('Adaptation video play failed:', err);
+            console.warn('Adaptation video play failed:', err);
           });
         });
 
+        // 鼠标离开时暂停并重置视频
         card.addEventListener('mouseleave', () => {
           video.pause();
-          video.currentTime = 0;
+          video.currentTime = 0; // 重置到开头
         });
-
-        // 点击打开模态框预览
-        card.addEventListener('click', function () {
-          openVideoModal(video.querySelector('source').src);
-        });
-
-        // 添加鼠标样式提示可点击
-        card.style.cursor = 'pointer';
       });
 
-      // 模态框功能
-      const modal = document.getElementById('adaptation-video-modal');
-      const modalVideo = document.getElementById('adaptation-modal-video');
-      const closeBtn = document.querySelector('#adaptation-video-modal .video-modal-close');
-
-      function openVideoModal(videoSrc) {
-        modalVideo.src = videoSrc;
-        modal.style.display = 'block';
-        document.body.style.overflow = 'hidden'; // 防止背景滚动
-      }
-
-      function closeVideoModal() {
-        modal.style.display = 'none';
-        modalVideo.pause();
-        modalVideo.src = '';
-        document.body.style.overflow = ''; // 恢复滚动
-      }
-
-      // 关闭按钮事件
-      if (closeBtn) {
-        closeBtn.addEventListener('click', closeVideoModal);
-      }
-
-      // 点击模态框背景关闭
-      if (modal) {
-        modal.addEventListener('click', function (e) {
-          if (e.target === modal) {
-            closeVideoModal();
-          }
-        });
-      }
-
-      // ESC键关闭模态框
-      document.addEventListener('keydown', function (e) {
-        if (e.key === 'Escape' && modal.style.display === 'block') {
-          closeVideoModal();
-        }
-      });
+      console.log('✅ Adaptation module initialized with', videoCards.length, 'hover videos');
     };
 
     // DOM 加载后初始化
