修复apis、workflow、banner小bug

--- a/sections/APIs/APIs.html
+++ b/sections/APIs/APIs.html
@@ -222,6 +222,7 @@
     font-weight: 300;
     color: lightgray;
     line-height: 1.6;
+    margin-top: 0.5rem;
   }
 
   /* Responsive Design */
@@ -248,6 +249,7 @@
 
     .apis-description {
       font-size: 1.2rem;
+      margin-top: 0.5rem;
     }
 
     /* 所有卡片按比例缩小 60% */
@@ -346,6 +348,9 @@
   }
 
   @media (max-width: 767px) {
+    .api-description {
+      display: none;
+    }
     .apis-section {
       padding: var(--spacing-2xl) 0;
     }
@@ -650,7 +655,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-01.png" alt="Voice & Likeness API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-01.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-01.mp4"></video>
       </div>
       <span class="api-number">1</span>
       <div class="api-overlay">
@@ -663,7 +669,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-02.jpg" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-02.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-02.mp4"></video>
       </div>
       <span class="api-number">2</span>
       <div class="api-overlay">
@@ -676,7 +683,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-03.png" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-03.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-03.mp4"></video>
       </div>
       <span class="api-number">3</span>
       <div class="api-overlay">
@@ -689,7 +697,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-04.png" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-04.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-04.mp4"></video>
       </div>
       <span class="api-number">4</span>
       <div class="api-overlay">
@@ -702,7 +711,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-05.png" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-05.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-05.mp4"></video>
       </div>
       <span class="api-number">5</span>
       <div class="api-overlay">
@@ -715,7 +725,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-06.png" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-06.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-06.mp4"></video>
       </div>
       <span class="api-number">6</span>
       <div class="api-overlay">
@@ -728,7 +739,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-07.jpg" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-07.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-07.mp4"></video>
       </div>
       <span class="api-number">7</span>
       <div class="api-overlay">
@@ -741,7 +753,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-08.png" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-08.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-08.mp4"></video>
       </div>
       <span class="api-number">8</span>
       <div class="api-overlay">
@@ -754,7 +767,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-09.png" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-09.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-09.mp4"></video>
       </div>
       <span class="api-number">9</span>
       <div class="api-overlay">
@@ -767,7 +781,8 @@
     <div class="api-card">
       <div class="api-card-media">
         <img src="assets/APIs/images/APIs-image-10.png" alt="Brand Safety API" class="api-image">
-        <video class="api-video" muted loop playsinline preload="none" data-src="assets/APIs/videos/api-video-10.mp4"></video>
+        <video class="api-video" muted loop playsinline preload="none"
+          data-src="assets/APIs/videos/api-video-10.mp4"></video>
       </div>
       <span class="api-number">10</span>
       <div class="api-overlay">
