--- a/sections/workflow/workflow.html
+++ b/sections/workflow/workflow.html
@@ -378,6 +378,10 @@
     .workflow__card-content {
       padding: var(--spacing-md);
     }
+
+    .workflow__card-text {
+      display: none;
+    }
   }
 
   /* 超小屏优化 */
