--- a/sections/banner/banner.html
+++ b/sections/banner/banner.html
@@ -6,16 +6,16 @@
   /* 1. 鍩虹甯冨眬 - 鍏ㄥ睆瑙嗛鑳屾櫙锛堝欢浼稿埌瀵艰埅鏍忎笂鏂癸級*/
   .banner {
     position: relative;
-    min-height: 100vh;
+    min-height: 120vh;
     display: flex;
     flex-direction: column;
     padding: 0;
-    overflow: hidden;
     /* 防止内容溢出视口，同时让背景视频覆盖整个区域 */
     --banner-card-width: clamp(60px, 5vw, 81px);
     --banner-card-height: clamp(80px, 6.67vw, 108px);
     --banner-card-gap: clamp(0.5rem, 1.5vw, 1rem);
   }
+
   /* 瑙嗛鑳屾櫙瀹瑰櫒 */
   .banner-video-bg {
     position: absolute;
@@ -23,24 +23,33 @@
     width: 100%;
     height: auto;
     overflow: hidden;
+    margin-top: -4rem;
     z-index: 0;
   }
+
   .banner-video-bg video {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 45%;
     min-width: 100%;
-    min-height: 100%;
+    min-height: 85%;
     width: auto;
     height: auto;
-    transform: translate(-50%, -44%);
+    transform: translate(-50%, -50%);
     object-fit: cover;
     opacity: 0;
     transition: opacity 0.5s ease;
   }
+
   .banner-video-bg video.active {
     opacity: 1;
   }
+
+  .banner-nbg-video {
+    width: 120%;
+    height: 120%;
+  }
+
   /* 鏄熺┖鑳屾櫙鏁堟灉 */
   .banner::before {
     content: '';
@@ -60,6 +69,7 @@
     pointer-events: none;
     z-index: 1;
   }
+
   .banner-container {
     position: relative;
     max-width: 100%;
@@ -79,6 +89,7 @@
     /* 鍐呭涔嬮棿淇濇寔鍥哄畾闂磋窛 */
     z-index: 2;
   }
+
   /* 左侧内容区 */
   .banner-left {
     position: relative;
@@ -95,6 +106,7 @@
     /* 子元素文本居中 */
     z-index: 3;
   }
+
   .banner-title {
     font-size: clamp(1.5rem, 3vw, 2.5rem);
     /* 限制主标题字号范围 */
@@ -114,6 +126,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   .banner-subtitle {
     font-size: clamp(0.875rem, 1.5vw, 1rem);
     line-height: 1.6;
@@ -126,6 +139,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   /* 搜索框区域 */
   .search-box-container {
     position: relative;
@@ -134,6 +148,7 @@
     /* 宽度随屏幕调整 */
     margin: 0 auto;
   }
+
   .search-input {
     width: 100%;
     padding: 10px 140px 10px 20px;
@@ -157,9 +172,11 @@
     resize: none;
     vertical-align: middle;
   }
+
   .search-input::placeholder {
     color: rgba(255, 255, 255, 0.5);
   }
+
   .search-input:focus {
     outline: none !important;
     /* 去除默认焦点描边 */
@@ -170,6 +187,7 @@
     border: none !important;
     /* 去掉边框 */
   }
+
   .btn-run-engine {
     position: absolute;
     right: 6px;
@@ -192,11 +210,13 @@
     transition: transform var(--transition), box-shadow var(--transition), background var(--transition);
     white-space: nowrap;
   }
+
   .btn-run-engine:hover {
     transform: translateY(calc(-50% - 2px));
     box-shadow: 0 8px 24px rgba(255, 255, 255, 0.3);
     background: rgba(255, 255, 255, 0.95);
   }
+
   /* 视频卡片区域：保持单行排列 */
   .video-cards-container {
     position: relative;
@@ -209,8 +229,9 @@
     z-index: 100;
     overflow: hidden;
     width: min(calc(5 * var(--banner-card-width) + 4 * var(--banner-card-gap)), 90vw);
-    padding: 1.25rem 0;
+    padding: 8.25rem 0;
   }
+
   .video-cards-grid {
     display: flex;
     gap: var(--banner-card-gap);
@@ -224,6 +245,7 @@
     will-change: transform;
     /* 提前 hint 以优化性能 */
   }
+
   /* 单个卡片包装器（包含标题） */
   .video-card-wrapper {
     display: flex;
@@ -239,6 +261,7 @@
     --title-spacing: 0.25rem;
     --title-opacity: 0.85;
   }
+
   /* 卡片标题（显示在卡片下方） */
   .card-title {
     font-size: clamp(0.52rem, 0.8vw, 0.6rem);
@@ -256,33 +279,40 @@
       font-size 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     will-change: margin-top, opacity;
   }
+
   .video-card-wrapper.gap-small {
     --title-spacing: -0.15rem;
     --title-opacity: 0.55;
   }
+
   .video-card-wrapper.gap-small .card-title {
     font-size: clamp(0.44rem, 0.65vw, 0.52rem);
     opacity: 0.55;
     margin: -2.5rem;
   }
+
   .video-card-wrapper.gap-medium {
     --title-spacing: 0rem;
     --title-opacity: 0.8;
   }
+
   .video-card-wrapper.gap-medium .card-title {
     font-size: clamp(0.48rem, 0.72vw, 0.56rem);
     opacity: 0.8;
     margin: -1.5rem;
   }
+
   .video-card-wrapper.gap-large {
     --title-spacing: 0.28rem;
     --title-opacity: 1;
   }
+
   .video-card-wrapper.gap-large .card-title {
     font-size: clamp(0.55rem, 0.85vw, 0.68rem);
     opacity: 1;
     margin: 0.5rem;
   }
+
   /* 卡片主体：固定层级并使用绝对定位 */
   /* 背景切换卡片：增大高度表现力 */
   .video-card {
@@ -311,6 +341,7 @@
     will-change: transform;
     /* 鎬ц兘浼樺寲 */
   }
+
   /* 激活状态：加亮描边 */
   .video-card.active {
     transform: scale(1);
@@ -320,18 +351,21 @@
     outline-offset: 1.5px;
     box-shadow: 0 8px 24px rgba(255, 255, 255, 0.25);
   }
+
   /* 相邻卡片的第二层级 */
   .video-card.adjacent {
     transform: scale(0.85);
     opacity: 0.8;
     z-index: 2;
   }
+
   /* 卡片封面 */
   .video-card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
+
   /* 配置 5 个位置的 transform 样式（含 translateY 保持中心） */
   /* 位置 0：最左侧卡片，左倾 12° */
   .video-card.position-0 {
@@ -339,30 +373,35 @@
     opacity: 0.3;
     box-shadow: -8px 14px 30px rgba(0, 0, 0, 0.45);
   }
+
   /* 位置1 - 左侧卡片,向左倾斜9°*/
   .video-card.position-1 {
     transform: translateY(-12px) scale(0.75) rotateY(-9deg);
     opacity: 0.55;
     box-shadow: -4px 11px 25px rgba(0, 0, 0, 0.4);
   }
+
   /* 位置2 - 中间卡片 */
   .video-card.position-2 {
     transform: translateY(0px) scale(1.12) rotateY(0deg);
     opacity: 1;
     box-shadow: 0 20px 48px rgba(255, 255, 255, 0.25);
   }
+
   /* 位置3 - 右侧卡片,向右倾斜9°*/
   .video-card.position-3 {
     transform: translateY(-12px) scale(0.75) rotateY(9deg);
     opacity: 0.55;
     box-shadow: 4px 11px 25px rgba(0, 0, 0, 0.4);
   }
+
   /* 位置4 - 最右侧卡片,向右倾斜16°*/
   .video-card.position-4 {
     transform: translateY(-22px) scale(0.55) rotateY(16deg);
     opacity: 0.3;
     box-shadow: 8px 14px 30px rgba(0, 0, 0, 0.45);
   }
+
   /* 响应式样式 */
   /* ≥992px：固定容器宽度以容纳 5 张卡片 */
   @media (min-width: 992px) {
@@ -370,8 +409,10 @@
       width: min(calc(5 * var(--banner-card-width) + 4 * var(--banner-card-gap)), 90vw);
     }
   }
+
   /* 平板端 (768px - 991px) */
   @media (max-width: 991px) {
+
     /* Banner 容器：高度自适应并允许卡片溢出 */
     .banner {
       min-height: auto;
@@ -383,6 +424,7 @@
       overflow-y: visible;
       /* 允许纵向溢出，防止卡片被裁切 */
     }
+
     /* 内容容器：纵向排列并居中 */
     .banner-container {
       display: flex;
@@ -392,6 +434,7 @@
       gap: var(--spacing-xl);
       padding: 0 2rem;
     }
+
     /* 左侧内容区：限宽并保持居中 */
     .banner-left {
       width: 100%;
@@ -404,6 +447,7 @@
       align-items: center;
       /* 子元素保持竖直居中 */
     }
+
     /* 标题与副标题全部居中 */
     .banner-title,
     .banner-subtitle {
@@ -412,14 +456,17 @@
       margin-right: auto;
     }
   }
+
   /* 移动端 (< 768px) */
   @media (max-width: 767px) {
+
     /* Banner 瀹瑰櫒 */
     .banner {
       padding-top: calc(var(--nav-height) + var(--spacing-xl));
       padding-bottom: var(--spacing-2xl);
       min-height: auto;
     }
+
     /* 内容容器：缩窄左右边距保持居中 */
     .banner-container {
       padding: 0 1.5rem;
@@ -427,6 +474,7 @@
       align-items: center;
       /* 强制所有子元素居中 */
     }
+
     /* 左侧内容：居中对齐 */
     .banner-left {
       text-align: center;
@@ -437,34 +485,41 @@
       max-width: min(640px, 100%);
       margin: var(--spacing-lg) auto 0;
     }
+
     .banner-title {
       font-size: 2rem;
       max-width: 100%;
       text-align: center;
     }
+
     .banner-subtitle {
       font-size: 0.875rem;
       max-width: 100%;
       text-align: center;
     }
+
     /* 搜索框：居中显示 */
     .search-box-container {
       max-width: 100%;
     }
+
     .search-input {
       padding: 12px 120px 12px 16px;
       font-size: 8px;
     }
+
     .btn-run-engine {
       padding: 10px 20px;
       font-size: 0.9rem;
       right: 4px;
     }
+
     /* 卡片标题 */
     .card-title {
       font-size: 0.55rem;
     }
   }
+
   /* 小屏手机 (< 480px) */
   @media (max-width: 479px) {
     .banner-container {
@@ -472,39 +527,49 @@
       align-items: center;
       /* 保持居中 */
     }
+
     .banner-title {
       font-size: clamp(1.5rem, 8vw, 1.75rem);
       text-align: center;
     }
+
     .banner-subtitle {
       text-align: center;
     }
+
     .search-input {
       padding: 12px 110px 12px 14px;
     }
+
     .btn-run-engine {
       padding: 10px 16px;
       font-size: 0.85rem;
       right: 3px;
     }
   }
+
   /* 瑙︽懜璁惧浼樺寲 */
   @media (max-width: 991px) {
+
     /* 瑙︽懜鍙嶉 */
     .video-card:active {
       transform: scale(0.95);
       transition: transform 0.1s ease;
     }
+
     .btn-run-engine:active {
       transform: translateY(-50%) scale(0.98);
     }
   }
+
   /* 性能优化：在减少动画模式下禁用动效 */
   @media (prefers-reduced-motion: reduce) {
+
     .video-card,
     .btn-run-engine {
       transition: none !important;
     }
+
     .banner::before {
       animation: none !important;
     }
